tests/typechecker/should_pass/yieldable_dot.csp
channel c : { 0 }
channel d : productions(e.c.0)
channel e : {| c |}

P = STOP[[x <- d.e.x | x <- extensions(d.e)]]
