tests/typechecker/should_fail/scope_stmts_rename_op.csp
channel a : Bool
channel b : Bool

Q(x) = STOP
P = Q(x) [[ a.x <- b.x | x <- {true, false}]]
